# fquery

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
fquery/: __init__.py  aitertools.py  async_test.py  async_utils.py  cypher_builder.py  django.py  execute.py  fgraphql.py  filterexpr.py  item.py  malloy_builder.py  mock_user.py  polars_builder.py  pydantic.py  query.py  resolve.py  sql_builder.py  sqlmodel.py  view_model.py  visitor.py  walk.py
tests/: __init__.py  async_test.py  benchmark.py  django_example_model.py  graphql_mock_user.py  mock_user.py  test_cypher.py  test_malloy.py  test_operators.py  test_polars.py  test_pydantic.py  test_self_reference.py  test_sql.py  test_sqlmodel.py  test_walk.py  test_walk_obj.py
tests/test_data/: test_data_edge_count.txt  test_data_edge_let.txt  test_data_edge_project.txt  test_data_edge_project_other_kind.txt  test_data_edge_union.txt  test_data_two_hop_multiple_project.txt  test_data_two_hop_project.txt  test_edge_union.txt  test_edge_union_project_diff.txt  test_user_follower_project.txt
