[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "fquery"
version = "0.4"
description = "A graph query engine"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["aioitertools"]

[project.optional-dependencies]
SQL = [
    "pypika >= 0.36.5",
    "sqlmodel@git+https://github.com/adsharma/sqlmodel.git@sqlmodel_rebuild",
    "duckdb_engine >= 0.14.0",
    "inflection >= 0.5.1",
]
graphql = ["strawberry-graphql >= 0.37.1"]
df = ["polars >= 0.12.0"]
test = ["sqlalchemy >= 2.0.36"]

[tool.uv]
dev-dependencies = [
    "pytest",
    "polars >= 0.12.0",
    "pydantic",
    "sqlalchemy >= 2.0.36",
    "pypika >= 0.36.5",
    "sqlmodel@git+https://github.com/adsharma/sqlmodel.git@sqlmodel_rebuild",
    "duckdb_engine >= 0.14.0",
    "inflection >= 0.5.1",
    "strawberry-graphql >= 0.37.1",
]

[tool.isort]
profile = "black"
